--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,12 @@
+# Set config reload
+unbind u
+bind u source-file ~/.config/tmux/tmux.conf
+
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
+
+# Move status bar to top
+set-option -g status-position top
 
 # Mouse support
 set -g mouse on
@@ -21,11 +28,33 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Configure catpuccin
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # tmux-resurrect settings
 set -g @resurrect-strategy-vim 'session'
